--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 600px;
+    width: 100vw;
+    height:100vh;
     background: linear-gradient(to bottom, white,rgb(175, 175, 211),rgb(137, 137, 173));
     font-family: 'M PLUS 1', sans-serif;
     font-size: 8px;
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     width: 40%;
-    height: 50%;
+    height: 60%;
     background-color:white;
     border-radius: 12px;
     box-shadow: 2px 10px 10px 2px black;
